testdata/test/resources/com/yafred/asn1/test/should-fail/selection_wrong_alternative.asn
-- Subtype with Selection Type
-- FAILS selection not an alternative in choice

Sequence DEFINITIONS AUTOMATIC TAGS ::= BEGIN

My-Integer ::= three < My-Choice

My-Choice ::= CHOICE {
   one INTEGER,
   two IA5String
}
  
END
